--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install flet
 
       - name: Build APK
-        run: flet build apk --no-sign
+        run: flet build apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
