--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,7 @@ name: Test, Build and Release apk
 # 工作流程触发的时机，这里是当一个版本标签推送到仓库时触发
 on:
   push:
-    tags:
-      - v*
+    branches: [ main ]
 
 # 这个工作流程需要执行的任务
 jobs:
