--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,29 @@
-# main.yml
-# 自动构建 Apk
-name: Test, Build and Release apk
+name: Build APK
 
-# 工作流程触发的时机，这里是当一个版本标签推送到仓库时触发
 on:
   push:
     branches: [ main ]
 
-# 这个工作流程需要执行的任务
 jobs:
-  process:
-    name: all process
+  build:
     runs-on: ubuntu-latest
 
-    # 这个任务的步骤
     steps:
-      # 拉取项目代码
       - uses: actions/checkout@v2
 
-      # 建立 java 环境
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          java-version: "12.x"
+          python-version: 3.9
 
-      # 建立 Flutter 环境
-      - name: Flutter action
-        uses: subosito/flutter-action@v1.4.0
+      - name: Install Flet
+        run: pip install flet
+
+      - name: Build APK
+        run: flet build apk --no-sign
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
         with:
-          channel: "stable"
-          flutter-version: "1.22.4"
-
-      # 下载项目依赖
-      - run: flutter pub get
-
-      # 下载 Flet 客户端
-      - run: wget https://github.com/flet/flet/releases/download/v0.1.0/flet-linux-x64.zip
-      - run: unzip flet-linux-x64.zip
-
-
-      # 打包 APK
-      - run: ./flet-linux-x64 build apk --release
-      # 发布到 Release
-      - name: Release apk
-        uses: ncipollo/release-action@v1.5.0
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk"
+          name: grassbag.apk
+          path: build/app/outputs/flutter-apk/app-release.apk
