--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,10 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.1.5'
+          flutter-version: '2.5.3'
+
+      - name: Update Dart SDK
+        run: flutter upgrade
 
       - name: Build APK
         run: flet build apk
