--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: grassbag.ipa
-          path: build/app/ipa/app-release.ipa
+          path: build/ipa/app-release.ipa
