--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: grassbag.apk
-          path: build/app/app-release.apk
+          path: build/apk/app-release.apk
