--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,11 @@ jobs:
       - name: Build APK
         run: flet build apk
 
-      - name: Upload APK
+      - name: Zip build folder
+        run: zip -r build.zip build
+
+      - name: Upload build folder
         uses: actions/upload-artifact@v2
         with:
-          name: grassbag.apk
-          path: build/apk/app-release.apk
+          name: build.zip
+          path: build.zip
