--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Build APK
         run: flet build apk
 
+      - name: show tree
+        run: tree
+
       - name: Zip build folder
         run: zip -r build.zip build
 
