--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -30,20 +30,15 @@ jobs:
       - name: Build IPA
         run: flet build ipa
 
-      - name: Export ipa
-        run: xcodebuild -exportArchive -archivePath ./build/ipa/Runner.xcarchive -exportPath ./build/ipa/grassbag.ipa -exportOptionsPlist ExportOptions.plist CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
-
-      - name: Zip build folder
-        run: zip -r build.zip build
-
-      - name: Upload build folder
-        uses: actions/upload-artifact@v2
-        with:
-          name: build.zip
-          path: build.zip
+      - name: Convert xcarchive to ipa
+        run: |
+          cd /build/ipa/Runner.xcarchive/Products
+          mv Applications Payload
+          zip -r Payload.zip Payload
+          mv Payload.zip grassbag.ipa
 
       - name: Upload ipa
         uses: actions/upload-artifact@v2
         with:
           name: grassbag.ipa
-          path: ./build/ipa/grassbag.ipa
+          path: ./grassbag.ipa
