--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,10 @@ jobs:
       - name: Update Dart SDK
         run: flutter upgrade
 
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+
       - name: Build APK
         run: flet build apk
 
