--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           sudo apt-get install -y libffi-dev libssl-dev
 
       - name: Install Flet
-        run: pip install flet
+        run: pip install flet pycryptodome
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v1
