--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libffi-dev libssl-dev
 
+      - name: Install pycryptodomex
+        run: pip install pycryptodomex
+
       - name: Install Flet
         run: pip install flet
 
