--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libffi-dev libssl-dev
-
+        
+      - name: Install dependencies
+        run: |
+           sudo apt-get update
+           sudo apt-get install -y build-essential python-dev
+  
       - name: Install pycryptodomex
         run: pip install pycryptodomex
 
