--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
         
       - name: Install dependencies
         run: |
-           sudo apt-get update
-           sudo apt-get install -y build-essential python-dev
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3-dev
+  
   
       - name: Install pycryptodomex
         run: pip install pycryptodomex
