--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libffi-dev libssl-dev
-        
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev
-  
+          sudo apt-get install -y libffi-dev libssl-dev build-essential python3-dev gcc g++ make
+          pip install --upgrade cffi
+
   
       - name: Install pycryptodomex
         run: pip install pycryptodomex
