--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.9
 
       - name: Install Flet
-        run: pip install flet
+        run: pip install flet==0.19.0
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v1
